syntax = "proto3";
package stargate.mint;

import "gogoproto/gogo.proto";
import "cosmos/mint/v1beta1/mint.proto";

option go_package = "github.com/osmosis-labs/osmosis/v10/wasmbinding/stargate/mint";

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  cosmos.mint.v1beta1.Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryInflationResponse is the response type for the Query/Inflation RPC
// method.
message QueryInflationResponse {
  // inflation is the current minting inflation value.
  bytes inflation = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// QueryAnnualProvisionsResponse is the response type for the
// Query/AnnualProvisions RPC method.
message QueryAnnualProvisionsResponse {
  // annual_provisions is the current minting annual provisions value.
  bytes annual_provisions = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
